<resources>
    <string name="app_name">Swimming Techniques</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_player">PlayerActivity</string>

    <string name="breathing">Breathing</string>
    <string name="freestyle">Freestyle</string>
    <string name="backstroke">Backstroke</string>
    <string name="butterfly">Butterfly</string>
    <string name="favorite">Favorite</string>
    <string name="pool">Pool Location</string>
    
    <string name="search_breathing">breathing techniques for swimming beginners</string>
    <string name="search_freestyle">swimming freestyle technique</string>
    <string name="search_backstroke">swimming backstroke technique</string>
    <string name="search_butterfly">swimming butterfly technique</string>

    <string name="error_init_failure">Initialization failure: Unable to play video</string>
    <string name="google_map_apikey">AIzaSyBJyuvBsZWp_R4lE-4yKWsH9hPr5-nSevc</string>

    <!--Content description strings-->
    <string name="youtube_player">youtube player</string>
    <string name="youtube_thumbnail_view">Youtube thumbnail view</string>
    <string name="youtube_video_title">Youtube video title</string>
    <string name="youtube_thubnail_overlay_title">thumbnail overlay title</string>
    <string name="customised_framelayout">Customised Frame layout</string>
    <string name="customised_scrollview">Customised scroll view</string>
    <string name="youtube_Thumbnail_placeholder">Youtube thumbnail placeholder</string>
    <string name="SwimDetailActivity_title">SwimDetailActivity title</string>
    <string name="SwimDetailActivity_likesDislike_textview">SwimDetailActivity likeDislike</string>
    <string name="SwimDetailActivity_description">SwimDetailActivity Description</string>
    <string name="SwimDetailActivity_favorate">SwimDetailActivity Favorate</string>
    <string name="SwimListActivity_gridview">SwimListActivity Gridview</string>
    <string name="SwimDetailActivity_share">SwimDetailActivity Share</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">swimmingtechnique.explore.com</string>
    <string name="content_authority">com.explore.archana.swimmingtechniques.app</string>
    
    <string name="transition_photo">transition video</string>
    <string name="empty">no favorite swimming technique</string>

    <string name="check_internet">Please check for Internet connection</string>

</resources>
