<?xml version="1.0" encoding="utf-8"?>
<com.explore.archana.swimmingtechniques.coustomviews.DrawInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/draw_insets_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/customised_framelayout">

    <com.explore.archana.swimmingtechniques.coustomviews.ObservableScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/customised_scrollview"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/photo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/photo_placeholder"
                android:contentDescription="@string/youtube_Thumbnail_placeholder">

                <!-- YouTube Fragment -->
                <fragment
                    android:id="@+id/swim_detail_container"
                    android:name="com.explore.archana.swimmingtechniques.fragment.SwimDetailFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true" />
            </FrameLayout>

            <com.explore.archana.swimmingtechniques.coustomviews.MaxWidthLinearLayout
                android:id="@+id/description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/detail_card_top_margin"
                android:background="#fff"
                android:elevation="10dp"
                android:maxWidth="@dimen/detail_card_max_width"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_textview"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                    android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                    android:contentDescription="@string/SwimDetailActivity_title"
                    android:fontFamily="sans-serif-condensed"
                    android:lineSpacingMultiplier="0.9"
                    android:paddingTop="@dimen/top_padding"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/detail_title_text_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="2dp"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/detail_inner_horiz_margin"
                    android:paddingEnd="@dimen/detail_inner_horiz_margin"
                    android:paddingTop="@dimen/detail_metabar_vert_padding">

                    <ImageButton
                        android:id="@+id/share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/ic_share_variant"
                        android:contentDescription="@string/SwimDetailActivity_share"/>

                    <TextView
                        android:id="@+id/likesDislike_textview"
                        style="?android:attr/textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:contentDescription="@string/SwimDetailActivity_likesDislike_textview"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/detail_body_text_size" />


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/description_body"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_inner_horiz_margin"
                    android:layout_marginRight="@dimen/detail_inner_horiz_margin"
                    android:autoLink="web"
                    android:contentDescription="@string/SwimDetailActivity_description"
                    android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier"
                    android:paddingBottom="@dimen/detail_body_bottom_margin"
                    android:paddingTop="@dimen/top_padding"
                    android:textColor="@android:color/black"
                    android:textColorLink="@color/accent"
                    android:textSize="@dimen/detail_body_text_size" />
            </com.explore.archana.swimmingtechniques.coustomviews.MaxWidthLinearLayout>
        </FrameLayout>
    </com.explore.archana.swimmingtechniques.coustomviews.ObservableScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favo_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:src="@mipmap/ic_heart_dark"
        android:stateListAnimator="@anim/fab_state_list_anim"
        app:elevation="@dimen/fab_elevation"
        app:fabSize="normal"
        app:pressedTranslationZ="@dimen/fab_press_translation_z"
        app:rippleColor="@color/primary" />

</com.explore.archana.swimmingtechniques.coustomviews.DrawInsetsFrameLayout>